--- a/Blog-App-policy-permission/Views/_ViewImports.cshtml
+++ b/Blog-App-policy-permission/Views/_ViewImports.cshtml
@@ -1,5 +1,6 @@
 ﻿@using Blog_App_policy_permission
 @using Blog_App_policy_permission.Models
 @using Blog_App_policy_permission.ViewModel
+@namespace Blog_App_policy_permission.Pages
 @using Microsoft.AspNetCore.Identity
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
