--- a/Blog-App-policy-permission/Pages/Index.cshtml
+++ b/Blog-App-policy-permission/Pages/Index.cshtml
@@ -50,7 +50,7 @@
                                 <h5 class="card-title">@article.Title</h5>
                                 <p class="card-text">
                                     Some quick example text to build on the card title and make up the bulk of the
-                                    card's content.@article.Author.UserName
+                                    card's content.
                                 </p>
                                 <a asp-page="/Detail" asp-route-id="@article.Id" class="btn btn-primary">Read</a>
                             </div>
